got the full thing working